# 05220---FUNDAMENTOS-DE-COMUNICACAO-DIGITAL---DECOMPOSI-O-DE-FOURIER

decompisção de fourier/: README.md  main.py  pyproject.toml
decompisção de fourier/classe_decompisão/: decomposicao.py
